Align image text and fix the navigation bar

--- a/client/src/scss/main.css
+++ b/client/src/scss/main.css
@@ -310,6 +310,7 @@ a {
   font-size: 2.5rem;
   margin-top: 3.5rem;
   margin-left: 72rem;
+  width: 50rem;
 }
 .main-page .benefits .robots-content .robots-advantages-img {
   width: 50rem;
@@ -327,6 +328,7 @@ a {
   font-size: 2.8rem;
   margin-left: 1rem;
   margin-top: 3.5rem;
+  width: 50rem;
 }
 .main-page .benefits .robots-content .second-advantages-img {
   width: 50rem;
@@ -345,6 +347,7 @@ a {
   font-size: 2.5rem;
   margin-top: 3.5rem;
   margin-left: 72rem;
+  width: 50rem;
 }
 .main-page .review {
   display: flex;
